# AttoTradingTestTask

./: CMakeLists.txt  README.md
src/: FileAnalyzer.cpp  FileAnalyzer.hpp  FileGenerator.cpp  FileGenerator.hpp  FileSorter.cpp  FileSorter.hpp  file_analyzer.cpp  file_generator.cpp  file_sorter.cpp
